--- a/gwdetect.conf
+++ b/gwdetect.conf
@@ -5,6 +5,7 @@
 
 [Input]
 filename=
+# Interface capture is not yet supported
 interface=
 
 [Output]
@@ -12,8 +13,10 @@ interface=
 log_file=
 output_file=
 circos_report=../circos.out
+#time_debug=True
+time_debug=
 
 [Filter]
 whitelist_gateways=10.200.100.1
-protected_subnet=
+protected_subnet=10.200.100.0/24
 
